[metadata]
name = apogeenet2
version = 1.0.0.dev1
author = Dani Sprague
author_email = spragud2@wwu.edu
description = A pipeline for APOGEE Net II, which makes predictions from stellar spectra.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hutchresearch/ApogeeNet2
project_urls =
    Bug Tracker = https://github.com/hutchresearch/ApogeeNet2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    numpy
    astropy

[options.package_data]
apogeenet2 = model.pt, dataset.py, pipeline.py, model.py

[options.entry_points]
console_scripts =
    apogeenet2 = apogeenet2.pipeline:main
